tests/NormalTests/paczka1/small_fuzzy/28094675.err
Error in line 2: ZfplQmiiBgl A884 70,0
Error in line 10: 5GBUnJGkGR A963 98,3
